--- a/source/GermanLearning.WebApp/Components/Pages/Words/AddWord.razor
+++ b/source/GermanLearning.WebApp/Components/Pages/Words/AddWord.razor
@@ -69,8 +69,8 @@
     private MudForm _form;
 
     private string _german;
-    private string _english;
-    private string _spanish;
+    private List<string> _english;
+    private List<string> _spanish;
     private WordType _type = WordType.None;
     private Gender _gender = Gender.None;
     private string? _topic;
